--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <h2><li>Congratulations 😎</li></h2>
           <li>⭐ Joy Seng</li>
           <li>⭐ Princy James</li>
+          <li>Juan Cardenas</li>
         </ol>
       </div>
 
