added full stop

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li>⭐ Joy Seng</li>
           <li>⭐ Princy James</li>
           <li>⭐ Juan Cardenas</li>
-          <li>⭐ Lyndsey Cooper</li>
+          <li>⭐ Lyndsey Cooper.</li>
         </ol>
       </div>
 
