--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           <h2><li>Congratulations 😎</li></h2>
           <li>⭐ Joy Seng</li>
           <li>⭐ Princy James</li>
-          <li>⭐ Juan Cardenas.</li>
-          <li>⭐ Lyndsey Cooper.</li>
+          <li>⭐ Juan Cardenas</li>
+          <li>⭐ Lyndsey Cooper</li>
+          <li>⭐ Mirha Masala</li>
         </ol>
       </div>
 
