--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title> ⭐ Github Hall of Fame ⭐</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>⭐ Github Hall of Fame ⭐</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="title-container">
+        <h1>⭐ Git 101 Workshop Hall of Fame ⭐</h1>
+        <img src="images/white_logo_white_font.png" id="logo" />
+        <img src="images/women_who_code_logo.png" id="whc_logo" />
+      </div>
 
-  <div class="container">
-
-    <div class="title-container">
-      <h1>⭐ Git 101 Workshop Hall of Fame ⭐</h1>
-      <img src="images/white_logo_white_font.png" id="logo">
-      <img src="images/women_who_code_logo.png" id="whc_logo">
-    </div>
-
-    <div class="list-container">
-      <ol id="hall_of_fame">
-        <!-- GIVE YOURSELF A STAR AND ADD YOUR NAME BETWEEN <li></li> tags-->
+      <div class="list-container">
+        <ol id="hall_of_fame">
+          <!-- GIVE YOURSELF A STAR AND ADD YOUR NAME BETWEEN <li></li> tags-->
           <h2><li>Congratulations 😎</li></h2>
           <li>⭐ Joy Seng</li>
           <li>⭐ Princy James</li>
           <li>⭐ Juan Cardenas</li>
           <li>⭐ Lyndsey Cooper</li>
           <li>⭐ Mirha Masala</li>
+          <li>⭐ Cec Cook</li>
         </ol>
       </div>
-
     </div>
-
   </body>
-  </html>
+</html>
