--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <ol id="hall_of_fame">
         <!-- GIVE YOURSELF A STAR AND ADD YOUR NAME BETWEEN <li></li> tags-->
           <h2><li>Congratulations 😎</li></h2>
+	  <li>⭐ Somi Jaiswal</li>		
           <li>⭐ Joy Seng</li>
           <li>⭐ Princy James</li>
           <li>⭐ Juan Cardenas</li>
