--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li>⭐ Juan Cardenas</li>
           <li>⭐ Lyndsey Cooper</li>
           <li>⭐ Mirha Masala</li>
+          <li>⭐ Robin Klaus</li>
         </ol>
       </div>
 
