--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <li>⭐ Juan Cardenas</li>
           <li>⭐ Lyndsey Cooper</li>
           <li>⭐ Mirha Masala</li>
-        </ol>
+          <li>⭐ Jasmin Munera</li>
+	</ol>
       </div>
 
     </div>
