--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -25,6 +25,7 @@
           <li>⭐ Juan Cardenas</li>
           <li>⭐ Lyndsey Cooper</li>
           <li>⭐ Mirha Masala</li>
+<li>⭐ Daphne Charles</li>
         </ol>
       </div>
 
