--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <div class="list-container">
       <ol id="hall_of_fame">
         <!-- GIVE YOURSELF A STAR AND ADD YOUR NAME BETWEEN <li></li> tags-->
-          <h2><li>Congratulations 😎</li></h2>
+          <h2><li>Congratulations 😎</li></h2
+	  <li>⭐ Yvonne Lam </li>
           <li>⭐ Joy Seng</li>
-          <li>⭐ Princy James</li>
+          <li>⭐ rincy James</li>
           <li>⭐ Juan Cardenas</li>
           <li>⭐ Lyndsey Cooper</li>
           <li>⭐ Mirha Masala</li>
