Added my name Smita

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       <ol id="hall_of_fame">
         <!-- GIVE YOURSELF A STAR AND ADD YOUR NAME BETWEEN <li></li> tags-->
           <h2><li>Congratulations 😎</li></h2>
+		   <li>⭐ Smita Dutta</li>
           <li>⭐ Joy Seng</li>
           <li>⭐ Princy James</li>
           <li>⭐ Juan Cardenas</li>
           <li>⭐ Lyndsey Cooper</li>
           <li>⭐ Mirha Masala</li>
+		  
         </ol>
       </div>
 
