add Narj and Teresa

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <li>⭐ Juan Cardenas</li>
           <li>⭐ Lyndsey Cooper</li>
           <li>⭐ Mirha Masala</li>
+	  <li>⭐ Narj Ghorbani</li>
+          <li>⭐ Teresa Blake</li>
         </ol>
       </div>
 
